# wavesense

./: .codecov.yml  .gitattributes  .gitignore  CONCEPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
core/: dispatch.py
examples/: basic_demo.py
security/: __init__.py  provider.py
tests/: test_provider.py
wavesense/: __init__.py
wavesense/core/: capture.py
wavesense/quantum/: stub.py
wavesense/security/: __init__.py  oqs_provider.py  provider.py
