[project]
name = "wavesense"
version = "0.1.0"
description = "WiFi CSI behavioral sensing SDK"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "tflite-runtime>=2.15",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
crypto = ["cryptography>=42.0"]

[tool.ruff]
line-length = 99
target-version = "py39"
